benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExpPow2_Add_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_Mul.rs
Time: 2025-09-15 11:11:46

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:32:14
   |
32 |   let len1 = seq1.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:33:14
   |
33 |   let len2 = seq2.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:35:37
   |
35 |   let padded1: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len1 { '0' } else { seq1@[(i - (max_len - len1)) as int] });
   |                                     ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:35:105
   |
35 |   let padded1: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len1 { '0' } else { seq1@[(i - (max_len - len1)) as int] });
   |                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:36:37
   |
36 |   let padded2: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len2 { '0' } else { seq2@[(i - (max_len - len2)) as int] });
   |                                     ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:36:105
   |
36 |   let padded2: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len2 { '0' } else { seq2@[(i - (max_len - len2)) as int] });
   |                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:69:14
   |
69 |   let len2 = seq2.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:99:13
   |
99 |   let sn = (sy.len() as int) - 1;
   |             ^^^^^^^^^^^^^^^

error[E0425]: cannot find value `y` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:118:39
    |
118 |     let sy_sub: Vec<char> = Vec::from(y@[1..]);
    |                                       ^ help: a local variable with a similar name exists: `n`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:32:14
   |
32 |   let len1 = seq1.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:33:14
   |
33 |   let len2 = seq2.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:35:37
   |
35 |   let padded1: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len1 { '0' } else { seq1@[(i - (max_len - len1)) as int] });
   |                                     ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:35:105
   |
35 |   let padded1: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len1 { '0' } else { seq1@[(i - (max_len - len1)) as int] });
   |                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:36:37
   |
36 |   let padded2: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len2 { '0' } else { seq2@[(i - (max_len - len2)) as int] });
   |                                     ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:36:105
   |
36 |   let padded2: Seq<char> = Seq::new(max_len as nat, |i: int| if i < max_len - len2 { '0' } else { seq2@[(i - (max_len - len2)) as int] });
   |                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:69:14
   |
69 |   let len2 = seq2.len() as int;
   |              ^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:99:13
   |
99 |   let sn = (sy.len() as int) - 1;
   |             ^^^^^^^^^^^^^^^

error[E0425]: cannot find value `y` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:118:39
    |
118 |     let sy_sub: Vec<char> = Vec::from(y@[1..]);
    |                                       ^ help: a local variable with a similar name exists: `n`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0425`.
